# mlz-churn-service

./: Dockerfile  README.md  pyproject.toml
notebooks/: 1_churn_model.ipynb  2_workshop_churn.ipynb
src/: app.py  logger.py  marketing.py
src/data/: customer.json
src/pipeline/: predict.py  train.py
src/schemas/: models.py
