[project]
name = "mlz-churn-service"
version = "0.1.0"
description = "Churn prediction service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.120.1",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
]
